--- a/contact.html
+++ b/contact.html
@@ -27,18 +27,28 @@
         <div class="container contact-horizontal-cards">
             <div class="contact-row">
                 <div class="contact-card contact-info-card stylish-contact-card">
-                    <h2>Contact Us</h2>
-                    <ul class="contact-details">
-                        <li><span class="contact-icon"><svg width="20" height="20" fill="#0055a5" viewBox="0 0 24 24"><path d="M20 4H4C2.89 4 2 4.89 2 6V18C2 19.11 2.89 20 4 20H20C21.11 20 22 19.11 22 18V6C22 4.89 21.11 4 20 4ZM20 6L12 13L4 6H20ZM4 18V8.83L12 16.17L20 8.83V18H4Z"/></svg></span> <strong>Email:</strong> <a href="https://mail.google.com/mail/?view=cm&fs=1&to=noshahiitcenter@gmail.com" target="_blank">noshahiitcenter@gmail.com</a></li>
-                        <li><span class="contact-icon"><svg width="20" height="20" fill="#0055a5" viewBox="0 0 24 24"><path d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2a1 1 0 011.11-.21c1.21.49 2.53.76 3.89.76a1 1 0 011 1V20a1 1 0 01-1 1C10.07 21 3 13.93 3 5a1 1 0 011-1h3.5a1 1 0 011 1c0 1.36.27 2.68.76 3.89a1 1 0 01-.21 1.11l-2.2 2.2z"/></svg></span> <strong>Phone:</strong> <a href="tel:+923281642287">+92 328 1642287</a> <span class="contact-icon"><svg width="20" height="20" fill="#25D366" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.198.297-.767.966-.94 1.164-.173.198-.347.223-.644.075-.297-.149-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.447-.52.151-.174.2-.298.3-.497.099-.198.05-.372-.025-.521-.075-.149-.669-1.611-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.007-.372-.009-.571-.009-.198 0-.52.075-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.073.149.198 2.095 3.2 5.077 4.366.711.306 1.264.489 1.698.626.714.227 1.364.195 1.877.118.573-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347z"/></svg></span> <strong>WhatsApp:</strong> <a href="https://wa.me/923075071297" target="_blank">0307-5071297</a></li>
-                        <li><span class="contact-icon"><svg width="20" height="20" fill="#0055a5" viewBox="0 0 24 24"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg></span> <strong>Address:</strong>
-                            <ul class="campus-list">
-                                <li>Campus 1: Village 97 JB, Gojra</li>
-                                <li>Campus 2: Al Habib City, Gojra</li>
-                                <li>Campus 3: Thokar Niaz Baig, Lahore</li>
-                            </ul>
-                        </li>
-                    </ul>
+                    <div class="contact-accent-bar"></div>
+                    <div class="contact-location-block">
+                        <span class="contact-icon contact-location-icon">
+                            <svg width="28" height="28" fill="#0055a5" viewBox="0 0 24 24"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
+                        </span>
+                        <div class="contact-location-text">
+                            <strong>Noshahi IT Center</strong><br>
+                            Gojra & Lahore, Punjab, Pakistan
+                        </div>
+                    </div>
+                    <div class="contact-tagline">Empowering Your IT Future</div>
+                    <div class="contact-action-chips">
+                        <a class="contact-chip" href="tel:+923281642287">
+                            <span class="contact-icon"><svg width="18" height="18" fill="#fff" viewBox="0 0 24 24"><path d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2a1 1 0 011.11-.21c1.21.49 2.53.76 3.89.76a1 1 0 011 1V20a1 1 0 01-1 1C10.07 21 3 13.93 3 5a1 1 0 011-1h3.5a1 1 0 011 1c0 1.36.27 2.68.76 3.89a1 1 0 01-.21 1.11l-2.2 2.2z"/></svg></span>Call Us
+                        </a>
+                        <a class="contact-chip" href="https://mail.google.com/mail/?view=cm&fs=1&to=noshahiitcenter@gmail.com" target="_blank">
+                            <span class="contact-icon"><svg width="18" height="18" fill="#fff" viewBox="0 0 24 24"><path d="M20 4H4C2.89 4 2 4.89 2 6V18C2 19.11 2.89 20 4 20H20C21.11 20 22 19.11 22 18V6C22 4.89 21.11 4 20 4ZM20 6L12 13L4 6H20ZM4 18V8.83L12 16.17L20 8.83V18H4Z"/></svg></span>Email Us
+                        </a>
+                        <a class="contact-chip" href="https://wa.me/923075071297" target="_blank">
+                            <span class="contact-icon"><svg width="18" height="18" fill="#fff" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.198.297-.767.966-.94 1.164-.173.198-.347.223-.644.075-.297-.149-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.447-.52.151-.174.2-.298.3-.497.099-.198.05-.372-.025-.521-.075-.149-.669-1.611-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.007-.372-.009-.571-.009-.198 0-.52.075-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.073.149.198 2.095 3.2 5.077 4.366.711.306 1.264.489 1.698.626.714.227 1.364.195 1.877.118.573-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347z"/></svg></span>WhatsApp
+                        </a>
+                    </div>
                     <span class="address-bg-icon">
                         <svg width="120" height="120" fill="#00336611" viewBox="0 0 24 24"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
                     </span>
