updated testimonial names

--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
             <div class="testimonials-list">
                 <div class="testimonial-card">
                     <p>“Noshahi IT Center helped me land my first job in IT! The instructors are amazing and the environment is very supportive.”</p>
-                    <div class="testimonial-author">— Sara Khan</div>
+                    <div class="testimonial-author">— Abdul Haadi</div>
                 </div>
                 <div class="testimonial-card">
                     <p>“The courses are practical and up-to-date. I especially loved the hands-on projects and friendly staff.”</p>
-                    <div class="testimonial-author">— Ahmed Raza</div>
+                    <div class="testimonial-author">— Wahab</div>
                 </div>
                 <div class="testimonial-card">
                     <p>“A great place to start your tech journey. I recommend it to anyone serious about building a career in IT.”</p>
-                    <div class="testimonial-author">— Fatima Noor</div>
+                    <div class="testimonial-author">— Mahboob Ali</div>
                 </div>
             </div>
         </div>
