Updated Address in Footer

--- a/index.html
+++ b/index.html
@@ -138,7 +138,11 @@
                 <ul>
                     <li>Email: info@noshahiitcenter.com</li>
                     <li>Phone: +92 300 1234567</li>
-                    <li>Address: Main Road, City, Pakistan</li>
+                    <li>Campus 1: Village 97, Gojra</li>
+                    <li>Campus 2: Al Habib City, Gojra</li>
+                    <li>Campus 3: Thokar Niaz Baig, Lahore</li>
+
+
                 </ul>
                 <div class="footer-social">
                     <a href="#" aria-label="Facebook"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" alt="Facebook"/></a>
