--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="#">Courses</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -128,7 +128,7 @@
                 <h4>Quick Links</h4>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="#courses">Courses</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
